@@ -117,4 +117,13 @@ $chunks[10]->fromArray(array(
     'properties' => '',
 ),'',true,true);
 
+$chunks[11]= $modx->newObject('modChunk');
+$chunks[11]->fromArray(array(
+    'id' => 11,
+    'name' => 'lgnResetPassChangePassTpl',
+    'description' => '',
+    'snippet' => file_get_contents($sources['source_core'].'/elements/chunks/lgnresetpasschangepasstpl.chunk.tpl'),
+    'properties' => '',
+),'',true,true);
+
 return $chunks;
