@@ -33,14 +33,27 @@ class LoginResetPasswordController extends LoginController {
     /** @var string $password */
     protected $password = '';
 
+    protected $errors = array ();
+
     public function initialize() {
         $this->setDefaultProperties(array(
             'tpl' => 'lgnResetPassTpl',
             'tplType' => 'modChunk',
+            'changePasswordTpl' => 'lgnResetPassChangePassTpl',
+            'changePasswordTplType' => 'modChunk',
+            'changePasswordSubmitVar' => 'logcp-submit',
+            'fieldConfirmNewPassword' => 'password_new_confirm',
+            'fieldNewPassword' => 'password_new',
+            'errTpl' => 'lgnErrTpl',
+            'placeholderPrefix' => 'logcp.',
             'loginResourceId' => 1,
             'debug' => false,
+            'autoLogin' => false,
+            'forceChangePassword' => false,
         ));
         $this->modx->lexicon->load('login:profile');
+        $this->modx->lexicon->load('login:register');
+        $this->modx->lexicon->load('login:changepassword');
     }
 
     /**
@@ -51,7 +64,26 @@ class LoginResetPasswordController extends LoginController {
         $this->getUser();
         if (empty($this->user)) return '';
         if (!$this->verifyIdentity()) return '';
+
+        if ($this->getProperty('forceChangePassword')) {
+            if (!empty($_POST) && isset($_POST[$this->getProperty('submitVar','logcp-submit')])) {
+                $changed = $this->handleChangePasswordForm();
+                if ($changed !== true) {
+                    return $changed;
+                }
+            } else {
+                return $this->showChangePasswordForm();
+            }
+        }
+
         if (!$this->changePassword()) return '';
+
+        $this->eraseCache();
+
+        if ($this->getProperty('autoLogin')) {
+            $this->autoLogin();
+        }
+
         $this->fireEvents();
         return $this->getResponse();
     }
@@ -76,9 +108,7 @@ class LoginResetPasswordController extends LoginController {
         $cacheKey = 'login/resetpassword/'.md5($this->user->get('id').':'.$this->user->get('username'));
         $cachePass = $this->modx->cacheManager->get($cacheKey);
         $verified = $cachePass == $this->password;
-        if ($verified) {
-            $this->eraseCache();
-        }
+
         return $verified;
     }
 
@@ -141,6 +171,132 @@ class LoginResetPasswordController extends LoginController {
             'loginUrl' => $this->modx->makeUrl($this->getProperty('loginResourceId',1)),
         );
         return $this->login->getChunk($this->getProperty('tpl'),$placeholders,$this->getProperty('tplType','modChunk'));
+    }
+
+    public function showChangePasswordForm() {
+        return $this->login->getChunk($this->getProperty('changePasswordTpl'),null,$this->getProperty('changePasswordTplType','modChunk'));
+    }
+
+    /**
+     * Validate the form with FormIt-style validation
+     * @return array
+     */
+    public function validate() {
+        $this->loadValidator();
+        $fields = $this->validator->validateFields($this->dictionary,$this->getProperty('validate',''));
+        foreach ($fields as $k => $v) {
+            $fields[$k] = str_replace(array('[',']'),array('&#91;','&#93;'),$v);
+        }
+        $this->dictionary->fromArray($fields);
+
+        return $this->validator->getErrors();
+    }
+
+    /**
+     * Remove the submitVar from the fields array
+     * @return void
+     */
+    public function removeSubmitVar() {
+        $submitVar = $this->getProperty('changePasswordSubmitVar','logcp-submit');
+        if (!empty($submitVar)) {
+            $this->dictionary->remove($submitVar);
+        }
+    }
+
+    public function handleChangePasswordForm() {
+        $this->loadDictionary();
+        $this->errors = $this->validate();
+        if (!empty($this->errors)) {
+            $placeholderPrefix = $this->getProperty('placeholderPrefix','logcp.');
+            $this->modx->setPlaceholders($this->errors,$placeholderPrefix.'error.');
+            $this->modx->setPlaceholders($this->dictionary->toArray(),$placeholderPrefix);
+
+            return $this->showChangePasswordForm();
+        }
+
+        $this->validatePasswordLength();
+        $this->confirmMatchedPasswords();
+
+        if (!empty($this->errors)) {
+            $errorMsg = $this->prepareFailureMessage();
+            $this->modx->setPlaceholder($this->getProperty('placeholderPrefix').'error_message',$errorMsg);
+
+            return $this->showChangePasswordForm();
+        }
+
+        $this->password = $this->dictionary->get('password_new');
+
+
+        return true;
+    }
+
+    /**
+     * Ensure the new password is at least the minimum length as specified in System Settings
+     *
+     * @return boolean
+     */
+    public function validatePasswordLength() {
+        $validated = true;
+        $fieldNewPassword = $this->getProperty('fieldNewPassword','password_new');
+        $newPassword = $this->dictionary->get($fieldNewPassword);
+
+        $minLength = $this->modx->getOption('password_min_length',null,8);
+        if (empty($newPassword) || strlen($newPassword) < $minLength) {
+            $this->errors[$fieldNewPassword] = $this->modx->lexicon('login.password_too_short',array('length' => $minLength));
+            $validated = false;
+        }
+        return $validated;
+    }
+
+    /**
+     * If set, confirm that the confirmation password matches the new password
+     * @return boolean
+     */
+    public function confirmMatchedPasswords() {
+        $validated = true;
+        $fieldConfirmNewPassword = $this->getProperty('fieldConfirmNewPassword','password_new_confirm');
+        /* if using confirm, ensure they match */
+        if (!empty($fieldConfirmNewPassword)) {
+            $confirmNewPassword = $this->dictionary->get($fieldConfirmNewPassword);
+            $fieldNewPassword = $this->getProperty('fieldNewPassword','password_new');
+            $newPassword = $this->dictionary->get($fieldNewPassword);
+            if (empty($confirmNewPassword) || $newPassword != $confirmNewPassword) {
+                $this->errors[$fieldConfirmNewPassword] = $this->modx->lexicon('login.password_no_match');
+                $validated = false;
+            }
+        }
+        return $validated;
+    }
+
+    /**
+     * @param string $defaultErrorMessage
+     * @return string
+     */
+    public function prepareFailureMessage($defaultErrorMessage = '') {
+        $errorOutput = '';
+        $errTpl = $this->getProperty('errTpl');
+        $errors = $this->errors;
+        if (!empty($errors)) {
+            foreach ($errors as $error) {
+                $errorOutput .= $this->modx->getChunk($errTpl,  array('msg' => $error));
+            }
+        } else {
+            $errorOutput = $this->modx->getChunk($errTpl, array('msg' => $defaultErrorMessage));
+        }
+        return $errorOutput;
+    }
+
+    public function autoLogin() {
+        if ($this->user == null) { return false; }
+
+        // set session context(s) to log into
+        $contexts = $this->getProperty('authenticateContexts', $this->modx->context->get('key'));
+        $contexts = explode(',',$contexts);
+        foreach ($contexts as $ctx) {
+            $this->user->addSessionContext($ctx);
+        }
+
+        return true;
     }
 }
 return 'LoginResetPasswordController';
